Init ShellCorona after KDBusService

ShellCorona is created before KDBusService which registers the name.
This causes a problem as we register global shortcuts before plasmashell
--replace has kiled the old application, which in turn deregisters
everything.

We want everything before KDBusService to be as light as possible.

Moving ShellCorona construction is not trivial as some argument parsing
uses that.

BUG: 408310


(cherry picked from commit 9b9b6e5d9bb7308ea47b99eac4044517a8a80ee4)